--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,16 @@
+body,
+body * {
+    margin: 0;
+    padding: 0;
+    vertical-align: top;
+    box-sizing: border-box;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 .container {
     display:inline-block;
     width: 800px;
+    margin-top: 100px;
     background-color: red;
     margin-left: calc( (100% - 800px) / 2 ); 
 }
@@ -15,4 +25,8 @@
     width: 60%;
     float: left;
     background-color: yellow;
+}
+
+.close {
+
 }
