--- a/css/main.css
+++ b/css/main.css
@@ -7,11 +7,14 @@ body * {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+body {
+    background-color: #9fcbe0;
+}
+
 .container {
-    display:inline-block;
+    display: inline-block;
     width: 800px;
     margin-top: 100px;
-    background-color: red;
     margin-left: calc( (100% - 800px) / 2 ); 
 }
 
@@ -24,9 +27,80 @@ body * {
 .right-column {
     width: 60%;
     float: left;
-    background-color: yellow;
+    padding: 60px;
+    background-color: #fff;
 }
 
 .close {
-
 }
+
+form {
+    display: inline-block;
+    width: 100%;
+}
+
+form > .form-row {
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 40px;
+}
+
+form > .form-row:last-of-type {
+    margin-bottom: 0;
+}
+
+form > .form-row > label {
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 5px;
+    font-size: 15px;
+    line-height: 20px;
+    text-transform: uppercase;
+}
+
+form > .form-row > input { 
+    display: inline-block;
+    width: 100%;
+    font-size: 20px;
+    line-height: 30px;
+    border: none;
+    border-bottom: 2px solid #ccc;
+}
+
+form > .form-row > button {
+    float:left;
+    padding: 5px;
+    padding-left: 25px;
+    padding-right: 25px;
+    line-height: 20px;
+    border-radius: 15px;
+    border: none;
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    text-transform: capitalize;
+    background-color: #015cda;
+    cursor: pointer;
+}
+
+form > .form-row > span {
+    float:left;
+    padding: 5px;
+    line-height: 20px;
+    font-size: 16px;
+    margin-right: 15px;
+    margin-left: 15px;
+}
+
+form > .form-row > a {
+    float:left;
+    padding: 5px;
+    line-height: 20px;
+    font-size: 16px;
+    color:#015cda;
+    text-decoration: none;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+
