--- a/css/main.css
+++ b/css/main.css
@@ -29,9 +29,24 @@ body {
     float: left;
     padding: 60px;
     background-color: #fff;
+    position: relative;
 }
 
 .close {
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    font-size: 30px;
+    text-align: center;
+    line-height: 57px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+}
+
+.close:hover {
+    color: red;
+    cursor: pointer;
 }
 
 form {
