--- a/css/main.css
+++ b/css/main.css
@@ -9,14 +9,18 @@ body * {
 
 body {
     background-color: #9fcbe0;
+    position: relative;
+    height: 100vh;
 }
 
 .container {
     display: inline-block;
     width: 800px;
-    margin-top: 100px;
-    margin-left: calc( (100% - 800px) / 2 ); 
     position:relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
 }
 
 .left-column {
