--- a/css/main.css
+++ b/css/main.css
@@ -8,15 +8,27 @@ body * {
 }
 
 body {
-    background-color: #9fcbe0;
+    background-color: #6367b1;
     position: relative;
     height: 100vh;
+}
+
+.background {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    background-color: blue;
+    background-image: url(../img/hill.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    filter: blur(20px);
 }
 
 .container {
     display: inline-block;
     width: 800px;
-    position:relative;
+    position:absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
